--- a/basic-react-components/6.6.md
+++ b/basic-react-components/6.6.md
@@ -14,7 +14,7 @@ Part of this wiring is auto binding the context of the handler/callback to the s
 
 React supports the following events and event specific syntheticEvent properties:
 
-<table
+<table>
 <tr>
 <th>Event Type/Category:</th>
 <th>Events:</th>
@@ -23,7 +23,7 @@ React supports the following events and event specific syntheticEvent properties
   <tr>
   	<td><p>Clipboard</p></td>
     <td>onCopy, onCut, onPaste</td>
-	<td>DOMDataTransfer clipboardData</td>
+	<td>DOMDataTransfer, clipboardData</td>
   </tr>
   <tr>
   	<td><p>Composition</p></td>
@@ -33,23 +33,23 @@ React supports the following events and event specific syntheticEvent properties
   <tr>
   	<td><p>Keyboard</p></td>
     <td>onKeyDown, onKeyPress, onKeyUp</td>
-	<td>altKey
-charCode
-ctrlKey
-getModifierState(key)
-key
-keyCode
-locale
-location
-metaKey
-repeat
-shiftKey
+	<td>altKey,
+charCode,
+ctrlKey,
+getModifierState(key),
+key,
+keyCode,
+locale,
+location,
+metaKey,
+repeat,
+shiftKey,
 which</td>
   </tr>
   <tr>
 	  <td><p>Focus</p></td>
 	<td>onChange, onInput, onSubmit</td>
-  <td>DOMEventTarget relatedTarget</td>
+  <td>DOMEventTarget,  relatedTarget</td>
   </tr>
   <tr>
 	<td><p>Form</p></td>
@@ -61,20 +61,20 @@ which</td>
   <td>onClick, onContextMenu, onDoubleClick, onDrag, onDragEnd, onDragEnter, onDragExit
 onDragLeave, onDragOver, onDragStart, onDrop, onMouseDown, onMouseEnter, onMouseLeave
 onMouseMove, onMouseOut, onMouseOver, onMouseUp</td>
-  <td>altKey
-button
-buttons
-clientX
-clientY
-ctrlKey
-getModifierState(key)
-metaKey
-pageX
-pageY
-DOMEventTarget relatedTarget
-screenX
-screenY
-shiftKey
+  <td>altKey,
+button,
+buttons,
+clientX,
+clientY,
+ctrlKey,
+getModifierState(key),
+metaKey,
+pageX,
+pageY,
+DOMEventTarget relatedTarget,
+screenX,
+screenY,
+shiftKey,
   </td>
   </tr>
   <tr>
@@ -87,20 +87,20 @@ shiftKey
   <td>onTouchCancel, onTouchEnd, onTouchMove, onTouchStart</td>
   <td>
   altKey
-  DOMTouchList changedTouches
-  ctrlKey
-  getModifierState(key)
-  metaKey
-  shiftKey
-  DOMTouchList targetTouches
-  DOMTouchList touches
+  DOMTouchList changedTouches,
+  ctrlKey,
+  getModifierState(key),
+  metaKey,
+  shiftKey,
+  DOMTouchList targetTouches,
+  DOMTouchList touches,
   </td>
   </tr>
   <tr>
   <td><p>UI</p></td>
   <td>onScroll</td>
   <td>
-  detail
+  detail,
   DOMAbstractView view
   </td>
   </tr>
@@ -108,10 +108,10 @@ shiftKey
   <td><p>Wheel</p></td>
   <td>onWheel</td>
   <td>
-  deltaMode
-  deltaX
-  deltaY
-  deltaZ
+  deltaMode,
+  deltaX,
+  deltaY,
+  deltaZ,
   </td>
   </tr>
 
@@ -131,8 +131,8 @@ shiftKey
   <td><p>Animation</p></td>
   <td>onAnimationStart, onAnimationEnd, onAnimationIteration</td>
   <td>
-  animationName
-  pseudoElement
+  animationName,
+  pseudoElement,
   elapsedTime
   </td>
   </tr>
@@ -141,14 +141,13 @@ shiftKey
   <td><p>Transition</p></td>
   <td>onTransitionEnd</td>
   <td>
-  propertyName
-  pseudoElement
+  propertyName,
+  pseudoElement,
   elapsedTime
   </td>
   </tr>
 
 </table>
-
 
 #### Notes
 
