--- a/react-nodes/4.7.md
+++ b/react-nodes/4.7.md
@@ -52,7 +52,7 @@ The table below outlines the unique syntheticEvent properties for each type/cate
 
 React supports the following events:
 
-<table
+<table>
 <tr>
 <th>Event Type/Category:</th>
 <th>Events:</th>
@@ -61,7 +61,7 @@ React supports the following events:
   <tr>
   	<td><p>Clipboard</p></td>
     <td>onCopy, onCut, onPaste</td>
-	<td>DOMDataTransfer clipboardData</td>
+	<td>DOMDataTransfer, clipboardData</td>
   </tr>
   <tr>
   	<td><p>Composition</p></td>
@@ -71,23 +71,23 @@ React supports the following events:
   <tr>
   	<td><p>Keyboard</p></td>
     <td>onKeyDown, onKeyPress, onKeyUp</td>
-	<td>altKey
-charCode
-ctrlKey
-getModifierState(key)
-key
-keyCode
-locale
-location
-metaKey
-repeat
-shiftKey
+	<td>altKey,
+charCode,
+ctrlKey,
+getModifierState(key),
+key,
+keyCode,
+locale,
+location,
+metaKey,
+repeat,
+shiftKey,
 which</td>
   </tr>
   <tr>
 	  <td><p>Focus</p></td>
 	<td>onChange, onInput, onSubmit</td>
-  <td>DOMEventTarget relatedTarget</td>
+  <td>DOMEventTarget,  relatedTarget</td>
   </tr>
   <tr>
 	<td><p>Form</p></td>
@@ -99,20 +99,20 @@ which</td>
   <td>onClick, onContextMenu, onDoubleClick, onDrag, onDragEnd, onDragEnter, onDragExit
 onDragLeave, onDragOver, onDragStart, onDrop, onMouseDown, onMouseEnter, onMouseLeave
 onMouseMove, onMouseOut, onMouseOver, onMouseUp</td>
-  <td>altKey
-button
-buttons
-clientX
-clientY
-ctrlKey
-getModifierState(key)
-metaKey
-pageX
-pageY
-DOMEventTarget relatedTarget
-screenX
-screenY
-shiftKey
+  <td>altKey,
+button,
+buttons,
+clientX,
+clientY,
+ctrlKey,
+getModifierState(key),
+metaKey,
+pageX,
+pageY,
+DOMEventTarget relatedTarget,
+screenX,
+screenY,
+shiftKey,
   </td>
   </tr>
   <tr>
@@ -125,20 +125,20 @@ shiftKey
   <td>onTouchCancel, onTouchEnd, onTouchMove, onTouchStart</td>
   <td>
   altKey
-  DOMTouchList changedTouches
-  ctrlKey
-  getModifierState(key)
-  metaKey
-  shiftKey
-  DOMTouchList targetTouches
-  DOMTouchList touches
+  DOMTouchList changedTouches,
+  ctrlKey,
+  getModifierState(key),
+  metaKey,
+  shiftKey,
+  DOMTouchList targetTouches,
+  DOMTouchList touches,
   </td>
   </tr>
   <tr>
   <td><p>UI</p></td>
   <td>onScroll</td>
   <td>
-  detail
+  detail,
   DOMAbstractView view
   </td>
   </tr>
@@ -146,10 +146,10 @@ shiftKey
   <td><p>Wheel</p></td>
   <td>onWheel</td>
   <td>
-  deltaMode
-  deltaX
-  deltaY
-  deltaZ
+  deltaMode,
+  deltaX,
+  deltaY,
+  deltaZ,
   </td>
   </tr>
 
@@ -169,8 +169,8 @@ shiftKey
   <td><p>Animation</p></td>
   <td>onAnimationStart, onAnimationEnd, onAnimationIteration</td>
   <td>
-  animationName
-  pseudoElement
+  animationName,
+  pseudoElement,
   elapsedTime
   </td>
   </tr>
@@ -179,8 +179,8 @@ shiftKey
   <td><p>Transition</p></td>
   <td>onTransitionEnd</td>
   <td>
-  propertyName
-  pseudoElement
+  propertyName,
+  pseudoElement,
   elapsedTime
   </td>
   </tr>
