--- a/basic-react-components/6.2.md
+++ b/basic-react-components/6.2.md
@@ -82,14 +82,14 @@ Make sure you read the comments in the code.
 
 > [source code](https://jsfiddle.net/12u58fjb/#tabs=js,result,html,resources)
 
-It looks like a lot of code. However, the bulk of the code simply involves creating a Timer component and passing the `createClass` function creating the component a configuration object containing 5 properties (`getInitialState`, `tick`, `componentDidMount`, `componentWillUnmount`, `render`).
+It looks like a lot of code. However, the bulk of the code simply involves creating a `Timer` component and passing the `createClass()` function creating the component a configuration object containing 5 properties (`getInitialState`, `tick`, `componentDidMount`, `componentWillUnmount`, `render`).
 
-Notice that `Timer` is capitalized. When creating custom React components you need to capitalize the name of the component. Additionally, the value `this` among the configuration options refers to the component instance created. We'll discuss the component API in more detail at the end of this chapter. For now, just mediate on the configuration options available when defining a React component and a reference to the componet being created is achevied using the `this` keyword.
+Notice that `Timer` is capitalized. When creating custom React components you need to capitalize the name of the component. Additionally, the value `this` among the configuration options refers to the component instance created. We'll discuss the component API in more detail at the end of this chapter. For now, just meditate on the configuration options available when defining a React component and how a reference to the component is achieved using the `this` keyword.
 
 #### Notes
 
 * The component callback configuration options (`componentWillUnmount`, `componentDidUpdate`, `componentWillUpdate`, `shouldComponentUpdate`, `componentWillReceiveProps`, `componentDidMount`, `componentWillMount`) are also known as "lifecycle methods" because these various methods are executed at specific points in a component's lifecycle.
-* The `React.createClass()` function is a convenience function that creates component instances (via `new`) for you.
+* The `React.createClass()` function is a convenience function that creates component instances (via JavaScript `new` keyword) for you.
 * The `render()` function should be a pure function. Which means:
 
 >it does not modify component state, it returns the same result each time it's invoked, and it does not read from or write to the DOM or otherwise interact with the browser (e.g., by using `setTimeout`). If you need to interact with the browser, perform your work in `componentDidMount()` or the other lifecycle methods instead. Keeping `render()` pure makes server rendering more practical and makes components easier to think about.
