--- a/react-nodes/4.4.md
+++ b/react-nodes/4.4.md
@@ -42,7 +42,7 @@ The `foo` attribute/prop does not show up in the real DOM. This non-standard HTM
 
 > [source code](https://jsfiddle.net/codylindley/8ca0z80m/1/#tabs=js,result,html,resources)
 
-React attributes/props not only translate to real HTML attributes props but can also become configuration values that can be passed to React components. This aspect of props will be covered in the React props chapter. For now simply realize that passing a React node a prop is different from defining a prop on a component to be used configuration input within a component.
+React attributes/props not only translate to real HTML attributes props but can also become configuration values that can be passed to React components. This aspect of props will be covered in the React props chapter. For now simply realize that passing a React node a prop is different from defining a prop on a component to be used as configuration input within a component.
 
 #### Notes
 
