--- a/react-nodes/4.6.md
+++ b/react-nodes/4.6.md
@@ -1,6 +1,6 @@
 # Using Element Factories
 
-React provides built-in shortcuts for creating commonly used element nodes. These shortcuts are called React element factories.
+React provides built-in shortcuts for creating commonly used HTML element nodes. These shortcuts are called React element factories.
 
 Using a factory, the React element node `<li>one</li>` can be created like so:
 
