--- a/react-nodes/4.7.md
+++ b/react-nodes/4.7.md
@@ -4,7 +4,7 @@ Events can be added to React nodes much like events can be added to DOM nodes. I
 
 > [source code](https://jsfiddle.net/ct5acw2y/#tabs=js,result,html,resources)
 
-Note how the property name for an event in React starts with 'on' and is passed in the props argument object to the `ReactElement()` function.
+Note how the property name for an event in React starts with 'on' and is passed in the `props` argument object to the `ReactElement()` function.
 
 React creates what it calls a `SyntheticEvent` for each event, which contains the details for the event. Similar to the details that are define for DOM events. The `SyntheticEvent` instance, for an event, is passed into the events handlers/callback functions. In the code below I am logging the details of a SyntheticEvent instance.
 
