--- a/react-props/7.1.md
+++ b/react-props/7.1.md
@@ -4,7 +4,7 @@ The simplest way to explain component props would be to say that they function s
 
 > [source code](https://jsfiddle.net/codylindley/xcL8pff7/1/#tabs=js,result,html,resources)
 
-Inside the render function of the `BadgeList` component, where `Badge` is used, the `name` prop is added to the `Badge` component much like an HTML attribute is added to an HTML element (i.e., `<Badge name="Bill" />`). The `name` prop is then used by the `Badge` component (i.e. `this.props.name`) as the text node for the React `<div>` node rendered by the Badge component.
+Inside the render function of the `BadgeList` component, where `Badge` is used, the `name` prop is added to the `Badge` component much like an HTML attribute is added to an HTML element (i.e., `<Badge name="Bill" />`). The `name` prop is then used by the `Badge` component (i.e. `this.props.name`) as the text node for the React `<div>` node rendered by the `Badge` component.
 
 Another way to think about component props is that they are the configuration values sent to a component. If you look at the non-JSX version of the previous code example it should be obvious component props are just an object that gets passed to the `createElement()` function (i.e. `React.createElement(Badge, { name: "Bill" })`).
 
