--- a/react-nodes/4.2.md
+++ b/react-nodes/4.2.md
@@ -24,7 +24,7 @@ Below I use the `React.createElement()` function to create a virtual DOM represe
 var reactNodeLi = React.createElement('li', {id:'li1'}, 'one');
 ```
 
-Notice that the first argument defines which HTML element I want to represent. The second argument defines the attributes/props on the `<li>`.  And, the third argument defines what the node inside of the element will be. In this case, I am simply place a child text node (i.e., `'one'`) inside of the `<li>`. Note that, the last argument, that becomes a child of the node being created can be a React text node, a React element node, or even React component.
+Notice that the first argument defines which HTML element I want to represent. The second argument defines the attributes/props on the `<li>`.  And, the third argument defines what the node inside of the element will be. In this case, I am simply placing a child text node (i.e., `'one'`) inside of the `<li>`. Note that, the last argument, that becomes a child of the node being created can be a React text node, a React element node, or even React component.
 
 At this point all I've done is create a React element node containing a React text node that I have stored into the variable `reactNodeLi`. To create a virtual DOM next we have to actually render the React element node to a real DOM. To do this we use the `ReactDOM.render()` function.
 
@@ -97,7 +97,7 @@ It should be obvious that React nodes are just JavaScript objects in a tree that
 
 #### Notes
 
-* The `type` argument passed to `React.createElement(type,props,children)` can be a string indicating a standard HTML element (e.g., `'li'` = `<li></li>`) or a custom element (e.g., `'foo-bar'` = `<foo-bar></foo-bar>`.
+* The `type` argument passed to `React.createElement(type,props,children)` can be a string indicating a standard HTML element (e.g., `'li'` = `<li></li>`), a custom element (e.g., `'foo-bar'` = `<foo-bar></foo-bar>`, or a React component instance (i.e., an instance of `React.createClass()`.
 * These are the standard HTML elements that React supports:
 
 ```html
