--- a/basic-react-components/6.8.md
+++ b/basic-react-components/6.8.md
@@ -2,14 +2,14 @@
 
 If a component, when used, contains child components or React nodes inside of the component (e.g. `<Parent><Child /></Parent>` or `<Parent>test</Parent>`) these React node or component instances can be accessed by using `this.props.children`.
 
-In the code below the `Parent` component when used, contains two `<div>` React node children, which contains React text nodes. All of the children instances, inside of the component are accessible using `this.props.children`. In the code below I access these children inside of the `componentDidMount` lifecycle function.
+In the code below the `Parent` component when used, contains two `<div>` React node children, which contains React text nodes. All of the children instances, inside of the component are accessible using `this.props.children`. In the code below I access these children inside of the `Parent` `componentDidMount` lifecycle function.
 
 > [source code](https://jsfiddle.net/codylindley/z7u11n44/2/#tabs=js,result,html,resources)
 
 The `this.props.children` of the `Parent` component instance returns an array containing the references to the child React node instances. This array is logged out to the console. Additionally, in the `Parent` component I am logging out the child of the first `<div>`.
 
-Note how when I use the `Parent2` component inside of the `Parent` component the child React node of `Parent2` only contains one <span> React node. Thus, this.props.children will be a direct reference to this <span> React node.
+Note how when I use the `Parent2` component inside of the `Parent` component the child React node of `Parent2` only contains one <span> React node (i.e. `<span>child2text</span>`). Thus, `this.props.children` used in `componentDidMount` lifecycle function for `Parent2` component will be a direct reference to this `<span>` React node.
 
 ### Notes
 
-* When there is only a single child, this.props.children will be the single child component itself without the array wrapper. This saves an array allocation.
+* When there is only a single child, `this.props.children` will be the single child component itself without the array wrapper. This saves an array allocation.
