--- a/basic-react-components/6.8.md
+++ b/basic-react-components/6.8.md
@@ -1,4 +1,4 @@
-# Accessing Child Components/Nodes
+# Accessing Children Components/Nodes
 
 If a component, when used, contains child components or React nodes inside of the component (e.g. `<Parent><Child /></Parent>` or `<Parent><span>test<span></Parent>`) these React node or component instances can be accessed by using `this.props.children`.
 
@@ -42,3 +42,4 @@ Given that `this.props.children` can potentially contain a wide set of nodes and
 ### Notes
 
 * When there is only a single child, `this.props.children` will be the single child component itself without the array wrapper. This saves an array allocation.
+* It can be [confusing](https://facebook.github.io/react/tips/children-undefined.html) at first to realize that `children` are not what a component returns, but instead what is contained inside of component anywhere (including in a `render`) it is instantiated. 
