--- a/basic-react-components/6.8.md
+++ b/basic-react-components/6.8.md
@@ -1,45 +1,73 @@
-# Accessing Children Components/Nodes
+# Grokking Component Lifecycle's
 
-If a component, when used, contains child components or React nodes inside of the component (e.g. `<Parent><Child /></Parent>` or `<Parent><span>test<span></Parent>`) these React node or component instances can be accessed by using `this.props.children`.
+React components live certain life events that are called lifecycle's. These lifecycle's events are tied to lifecycle methods. I discussed several of these methods in section 6.2, because these methods are component configuration values set when defining/creating a component.
 
-In the code below the `Parent` component when used, contains two `<div>` React node children, which contains React text nodes. All of the children instances, inside of the component are accessible using `this.props.children`. In the code below I access these children inside of the `Parent` `componentDidMount` lifecycle function.
+The lifecycle methods provide hooks into the phases and the nature of a component. In the code example, take from section 6.2 (altered to unmount once it counts to 65), I am console logging the occurrence of the lifecycle `componentDidMount`, `componentWillUnmount`, and `getInitialState` lifecycle methods.
 
-> [source code](https://jsfiddle.net/codylindley/z7u11n44/#tabs=js,result,html,resources)
+> [source code](https://jsfiddle.net/codylindley/s3v614b3/#tabs=js,result,html,resources)
 
-The `this.props.children` of the `Parent` component instance returns an array containing the references to the child React node instances. This array is logged out to the console. Additionally, in the `Parent` component I am logging out the child of the first `<div>` (i.e. a text node).
+The methods can be divided into three categories (Mounting, Updating, and Unmounting).
 
-Note how when I use the `Parent2` component inside of the `Parent` component the child React node of `Parent2` only contains one `<span>` React node (i.e. `<span>child2text</span>`). Thus, `this.props.children` used in `componentDidMount` lifecycle function for `Parent2` component will be a direct reference to this `<span>` React node (i.e. not an array containing a single reference).
+Below I show a table for each category and the containing lifecycle methods.
 
-Given that `this.props.children` can potentially contain a wide set of nodes and components React provides a set of utilities to deal with this data structure. These utilities are listed below.
+###Mounting:
 
 <table>
-<tr>
-<th>Utilitie</th>
+<th>Method</th>
 <th>Description</th>
 </tr>
   <tr>
-  	<td><p>React.Children.map</p></td>
-    <td><p>Invoke fn on every immediate child contained within children with this set to thisArg. If children is a keyed fragment or array it will be traversed: fn will never be passed the container objects. If children is null or undefined returns null or undefined rather than an array.</p></td>
+  	<td><p>getInitialState()</p></td>
+    <td><p>is invoked before a component is mounted. Stateful components should implement this and return the initial state data.</p></td>
   </tr>
   <tr>
-  	<td><p>React.Children.forEach</p></td>
-    <td><p>Like React.Children.map() but does not return an array.</p></td>
+	  <td><p>componentWillMount()</p></td>
+	<td><p>is invoked immediately before mounting occurs.</p></td>
   </tr>
   <tr>
-  	<td><p>React.Children.count</p></td>
-    <td><p>Return the total number of components in children, equal to the number of times that a callback passed to map or forEach would be invoked.</p></td>
+	  <td><p>componentDidMount()</p></td>
+	<td><p>is invoked immediately after mounting occurs. Initialization that requires DOM nodes should go here.</p></td>
+  </tr>
+</table>
+
+###Updating:
+
+<table>
+<th>Method</th>
+<th>Description</th>
+</tr>
+  <tr>
+  	<td><p>componentWillReceiveProps(object nextProps)</p></td>
+    <td><p>is invoked when a mounted component receives new props. This method should be used to compare this.props and nextProps to perform state transitions using this.setState().</p></td>
   </tr>
   <tr>
-  	<td><p>React.Children.only</p></td>
-    <td><p>Return the only child in children. Throws otherwise.</p></td>
+	  <td><p>shouldComponentUpdate(object nextProps, object nextState)</p></td>
+	<td><p>is invoked when a component decides whether any changes warrant an update to the DOM. Implement this as an optimization to compare this.props with nextProps and this.state with nextState and return false if React should skip updating.</p></td>
   </tr>
   <tr>
-  	<td><p>React.Children.toArray</p></td>
-    <td><p>Return the children opaque data structure as a flat array with keys assigned to each child. Useful if you want to manipulate collections of children in your render methods, especially if you want to reorder or slice this.props.children before passing it down.</p></td>
+	  <td><p>componentWillUpdate(object nextProps, object nextState)</p></td>
+	<td><p>is invoked immediately before updating occurs. You cannot call this.setState() here.</p></td>
+  </tr>
+  <tr>
+	<td><p>componentDidUpdate(object prevProps, object prevState)</p></td>
+  <td><p>is invoked immediately after updating occurs.
+</p></td>
+  </tr>
+</table>
+
+###Unmounting:
+
+<table>
+<th>Method</th>
+<th>Description</th>
+</tr>
+  <tr>
+  	<td><p>componentWillUnmount()</p></td>
+    <td><p>is invoked immediately before a component is unmounted and destroyed. Cleanup should go here.</p></td>
   </tr>
 </table>
 
 ### Notes
 
-* When there is only a single child, `this.props.children` will be the single child component itself without the array wrapper. This saves an array allocation.
-* It can be [confusing](https://facebook.github.io/react/tips/children-undefined.html) at first to realize that `children` are not what a component returns, but instead what is contained inside of component anywhere (including in a `render`) it is instantiated. 
+* `componentDidMount` and `componentDidUpdate` is a good places to put other libraries' logic.
+* `component.forceUpdate()` can be invoked on any mounted component when you know that some deeper aspect of the component's state has changed without using `this.setState()`.
