--- a/basic-react-components/6.9.md
+++ b/basic-react-components/6.9.md
@@ -1,24 +1,45 @@
-# Using `ref` Attribute
+# Accessing Children Components/Nodes
 
-The `ref` attribute makes it possible to store a reference to a particular React element or component returned by the component `render()` configuration function. This can be valuable when you need a reference, from within a component, to some element or component contained within the `render()` function.
+If a component, when used, contains child components or React nodes inside of the component (e.g. `<Parent><Child /></Parent>` or `<Parent><span>test<span></Parent>`) these React node or component instances can be accessed by using `this.props.children`.
 
-To make a reference place the `ref` attribute with a function value on any React element or component. Then, inside of the function, the first parameter within the scope of the function will be a reference to the element or component the `ref` is on.
+In the code below the `Parent` component when used, contains two `<div>` React node children, which contains React text nodes. All of the children instances, inside of the component are accessible using `this.props.children`. In the code below I access these children inside of the `Parent` `componentDidMount` lifecycle function.
 
-> [source code](https://jsfiddle.net/codylindley/2oj6x0o6/#tabs=js,result,html,resources)
+> [source code](https://jsfiddle.net/codylindley/z7u11n44/#tabs=js,result,html,resources)
 
-For example in the code below I am console logging the reference out for each `ref`.
+The `this.props.children` of the `Parent` component instance returns an array containing the references to the child React node instances. This array is logged out to the console. Additionally, in the `Parent` component I am logging out the child of the first `<div>` (i.e. a text node).
 
-Notice (see console) that references to components are component instance while references to React elements return a reference to the actual DOM element in the HTML DOM (i.e. not a reference to the virtual DOM, but the actual HTML DOM).
+Note how when I use the `Parent2` component inside of the `Parent` component the child React node of `Parent2` only contains one `<span>` React node (i.e. `<span>child2text</span>`). Thus, `this.props.children` used in `componentDidMount` lifecycle function for `Parent2` component will be a direct reference to this `<span>` React node (i.e. not an array containing a single reference).
 
-A common use for `ref`'s are to store a reference on the component instance. In the code below I use the `ref` callback function on the input to store a reference on the component instance so other instance methods have access to the reference via `this`.
+Given that `this.props.children` can potentially contain a wide set of nodes and components React provides a set of utilities to deal with this data structure. These utilities are listed below.
 
-> [source code](https://jsfiddle.net/codylindley/ttfh7mdh/#tabs=js,result,html,resources)
+<table>
+<tr>
+<th>Utilitie</th>
+<th>Description</th>
+</tr>
+  <tr>
+  	<td><p>React.Children.map</p></td>
+    <td><p>Invoke fn on every immediate child contained within children with this set to thisArg. If children is a keyed fragment or array it will be traversed: fn will never be passed the container objects. If children is null or undefined returns null or undefined rather than an array.</p></td>
+  </tr>
+  <tr>
+  	<td><p>React.Children.forEach</p></td>
+    <td><p>Like React.Children.map() but does not return an array.</p></td>
+  </tr>
+  <tr>
+  	<td><p>React.Children.count</p></td>
+    <td><p>Return the total number of components in children, equal to the number of times that a callback passed to map or forEach would be invoked.</p></td>
+  </tr>
+  <tr>
+  	<td><p>React.Children.only</p></td>
+    <td><p>Return the only child in children. Throws otherwise.</p></td>
+  </tr>
+  <tr>
+  	<td><p>React.Children.toArray</p></td>
+    <td><p>Return the children opaque data structure as a flat array with keys assigned to each child. Useful if you want to manipulate collections of children in your render methods, especially if you want to reorder or slice this.props.children before passing it down.</p></td>
+  </tr>
+</table>
 
 ### Notes
 
-* Refs can't be attached to a stateless function because the component does not have a backing instance.
-* You might see a `ref` attribute with a string instead of a function, this is called a string `ref` and will likely be deprecated in the future. Function `ref`s are preferred.
-* The `ref` callback function is called immediately after the component is mounted.
-* References to a component instance allow one to call custom methods on the component if any are exposed when defining it.
-* Writing refs with inline function expressions means React will see a different function object on every update, `ref` will be called with null immediately before it's called with the component instance. i.e. When the referenced component is unmounted and whenever the `ref` changes, the old `ref` will be called with `null` as an argument.
-* FYI React recommends, "Refs are a great way to send a message to a particular child instance in a way that would be inconvenient to do via streaming Reactive props and state. They should, however, not be your go-to abstraction for flowing data through your application. By default, use the Reactive data flow and save refs for use cases that are inherently non-reactive." and "If you have not programmed several apps with React, your first inclination is usually going to be to try to use refs to "make things happen" in your app. If this is the case, take a moment and think more critically about where state should be owned in the component hierarchy. Often, it becomes clear that the proper place to "own" that state is at a higher level in the hierarchy. Placing the state there often eliminates any desire to use refs to "make things happen" – instead, the data flow will usually accomplish your goal."
+* When there is only a single child, `this.props.children` will be the single child component itself without the array wrapper. This saves an array allocation.
+* It can be [confusing](https://facebook.github.io/react/tips/children-undefined.html) at first to realize that `children` are not what a component returns, but instead what is contained inside of component anywhere (including in a `render`) it is instantiated. 
