--- a/basic-react-components/6.10.md
+++ b/basic-react-components/6.10.md
@@ -1,71 +1,24 @@
-# Grokking Component Lifecycle's
+# Using `ref` Attribute
 
-React components live certain life events that are called lifecycle's. These lifecycle's events are tied to lifecycle methods. I discussed several of these methods in section 6.2, because these methods are component configuration values set when defining a component.
+The `ref` attribute makes it possible to store a reference to a particular React element or component returned by the component `render()` configuration function. This can be valuable when you need a reference, from within a component, to some element or component contained within the `render()` function.
 
-The lifecycle methods provide hooks into the lifespan and nature of a component. In the code example, take from section 6.2 (altered to unmount once it counts to 65), I am console logging the occurrence of the lifecycle `componentDidMount`, `componentWillUnmount`, and `getInitialState` lifecycle methods.
+To make a reference place the `ref` attribute with a function value on any React element or component. Then, inside of the function, the first parameter within the scope of the function will be a reference to the element or component the `ref` is on.
 
-> [source code](https://jsfiddle.net/codylindley/s3v614b3/#tabs=js,result,html,resources)
+For example in the code below I am console logging the reference out for each `ref`.
 
-The methods can be divided into three categories (Mounting, Updating, and Unmounting).
+> [source code](https://jsfiddle.net/codylindley/2oj6x0o6/#tabs=js,result,html,resources)
 
-Below I show a table for each category and the containing lifecycle methods.
+Notice (see console) that references to components return component instances while references to React elements return a reference to the actual DOM element in the HTML DOM (i.e. not a reference to the virtual DOM, but the actual HTML DOM).
 
-###Mounting:
+A common use for `ref`'s are to store a reference on the component instance. In the code below I use the `ref` callback function on the text `<input>` to store a reference on the component instance so other instance methods have access to the reference via `this` (i.e. `this.textInput.focus()`).
 
-<table>
-<th>Method</th>
-<th>Description</th>
-</tr>
-  <tr>
-  	<td><p>getInitialState()</p></td>
-    <td><p>is invoked before a component is mounted. Stateful components should implement this and return the initial state data.</p></td>
-  </tr>
-  <tr>
-	  <td><p>componentWillMount()</p></td>
-	<td><p>is invoked immediately before mounting occurs.</p></td>
-  </tr>
-  <tr>
-	  <td><p>componentDidMount()</p></td>
-	<td><p>is invoked immediately after mounting occurs. Initialization that requires DOM nodes should go here.</p></td>
-  </tr>
-</table>
+> [source code](https://jsfiddle.net/codylindley/ttfh7mdh/#tabs=js,result,html,resources)
 
-###Updating:
+### Notes
 
-<table>
-<th>Method</th>
-<th>Description</th>
-</tr>
-  <tr>
-  	<td><p>componentWillReceiveProps(object nextProps)</p></td>
-    <td><p>is invoked when a mounted component receives new props. This method should be used to compare this.props and nextProps to perform state transitions using this.setState().</p></td>
-  </tr>
-  <tr>
-	  <td><p>shouldComponentUpdate(object nextProps, object nextState)</p></td>
-	<td><p>is invoked when a component decides whether any changes warrant an update to the DOM. Implement this as an optimization to compare this.props with nextProps and this.state with nextState and return false if React should skip updating.</p></td>
-  </tr>
-  <tr>
-	  <td><p>componentWillUpdate(object nextProps, object nextState)</p></td>
-	<td><p>is invoked immediately before updating occurs. You cannot call this.setState() here.</p></td>
-  </tr>
-  <tr>
-	<td><p>componentDidUpdate(object prevProps, object prevState)</p></td>
-  <td><p>is invoked immediately after updating occurs.
-</p></td>
-  </tr>
-</table>
-
-###Unmounting:
-
-<table>
-<th>Method</th>
-<th>Description</th>
-</tr>
-  <tr>
-  	<td><p>componentWillUnmount()</p></td>
-    <td><p>is invoked immediately before a component is unmounted and destroyed. Cleanup should go here.</p></td>
-  </tr>
-</table>
-
-* `componentDidMount` and `componentDidUpdate` is a good places to put other libraries' logic.
-* `component.forceUpdate()` can be invoked on any mounted component when you know that some deeper aspect of the component's state has changed without using `this.setState()`.
+* Refs can't be attached to a stateless function because the component does not have a backing instance.
+* You might see a `ref` attribute with a string instead of a function, this is called a string `ref` and will likely be deprecated in the future. Function `ref`s are preferred.
+* The `ref` callback function is called immediately after the component is mounted.
+* References to a component instance allow one to call custom methods on the component if any are exposed when defining it.
+* Writing refs with inline function expressions means React will see a different function object on every update, `ref` will be called with null immediately before it's called with the component instance. i.e. When the referenced component is unmounted and whenever the `ref` changes, the old `ref` will be called with `null` as an argument.
+* React makes two suggestions when using refs: "Refs are a great way to send a message to a particular child instance in a way that would be inconvenient to do via streaming Reactive props and state. They should, however, not be your go-to abstraction for flowing data through your application. By default, use the Reactive data flow and save refs for use cases that are inherently non-reactive." and "If you have not programmed several apps with React, your first inclination is usually going to be to try to use refs to "make things happen" in your app. If this is the case, take a moment and think more critically about where state should be owned in the component hierarchy. Often, it becomes clear that the proper place to "own" that state is at a higher level in the hierarchy. Placing the state there often eliminates any desire to use refs to "make things happen" – instead, the data flow will usually accomplish your goal."
