--- a/basic-react-components/6.8.md
+++ b/basic-react-components/6.8.md
@@ -1,16 +1,18 @@
 # Grokking Component Lifecycle's
 
-React components live certain life events that are called lifecycle's. These lifecycle's events are tied to lifecycle methods. I discussed several of these methods in section 6.2, because these methods are component configuration values set when defining/creating a component.
+React components live certain life events that are called lifecycle's. These lifecycle's events are tied to lifecycle methods. I discussed several of these methods in section 6.2, which discusses creating components, because these methods are component configuration values set when defining/creating a component.
 
 The lifecycle methods provide hooks into the phases and the nature of a component. In the code example, take from section 6.2 (altered to unmount once it counts to 65), I am console logging the occurrence of the lifecycle `componentDidMount`, `componentWillUnmount`, and `getInitialState` lifecycle methods.
 
 > [source code](https://jsfiddle.net/codylindley/s3v614b3/#tabs=js,result,html,resources)
 
-The methods can be divided into three categories (Mounting, Updating, and Unmounting).
+The methods can be divided into three categories (Mounting, Updating, and Unmounting phases).
 
 Below I show a table for each category and the containing lifecycle methods.
 
-###Mounting:
+###Mounting Phase (happens once in a components life):
+
+> The first phase of the React Component life cycle is the Birth/Mounting phase. This is where we start initialization of the Component. At this phase, the Component's props and state are defined and configured. The Component and all its children are mounted on to the Native UI Stack (DOM, UIView, etc.). Finally, we can do post-processing if required. The Birth/Mounting phase only occurs once. - [React In-depth](https://developmentarc.gitbooks.io/react-indepth/content/life_cycle/introduction.html)
 
 <table>
 <th>Method</th>
@@ -30,7 +32,9 @@ Below I show a table for each category and the containing lifecycle methods.
   </tr>
 </table>
 
-###Updating:
+###Updating Phase (happens over and over in a components life):
+
+> The next phase of the life cycle is the Growth/Update phase. In this phase, we get new props, change state, handle user interactions and communicate with the component hierarchy. This is where we spend most of our time in the Component's life. Unlike Birth or Death, we repeat this phase over and over. - [React In-depth](https://developmentarc.gitbooks.io/react-indepth/content/life_cycle/introduction.html)
 
 <table>
 <th>Method</th>
@@ -55,7 +59,9 @@ Below I show a table for each category and the containing lifecycle methods.
   </tr>
 </table>
 
-###Unmounting:
+###Unmounting Phase (happens once in a components life):
+
+> The final phase of the life cycle is the Death/Unmount phase. This phase occurs when a component instance is unmounted from the Native UI. This can occur when the user navigates away, the UI page changes, a component is hidden (like a drawer), etc. Death occurs once and readies the Component for Garbage Collection. - [React In-depth](https://developmentarc.gitbooks.io/react-indepth/content/life_cycle/introduction.html)
 
 <table>
 <th>Method</th>
@@ -71,3 +77,28 @@ Below I show a table for each category and the containing lifecycle methods.
 
 * `componentDidMount` and `componentDidUpdate` is a good places to put other libraries' logic.
 * `component.forceUpdate()` can be invoked on any mounted component when you know that some deeper aspect of the component's state has changed without using `this.setState()`.
+* Read [React In-depth](https://developmentarc.gitbooks.io/react-indepth/content/life_cycle/introduction.html) for a detailed look into the React component life cycle
+* Mounting Phase follows this order:
+<ol>
+<li>Initialize / Construction</li>
+<li><code>getDefaultProps()</code> <em>(React.createClass)</em> or <code>MyComponent.defaultProps</code> <em>(ES6 class)</em></li>
+<li><code>getInitialState()</code> <em>(React.createClass)</em> or <code>this.state = ...</code> <em>(ES6 constructor)</em></li>
+<li><code>componentWillMount()</code></li>
+<li><code>render()</code></li>
+<li>Children initialization &amp; life cycle kickoff</li>
+<li><code>componentDidMount()</code></li>
+</ol>
+* Updating Phase follows this order:
+<ol>
+<li><code>componentWillReceiveProps()</code></li>
+<li><code>shouldComponentUpdate()</code></li>
+<li><code>render()</code></li>
+<li>Children Life cycle methods</li>
+<li><code>componentWillUpdate()</code></li>
+</ol>
+* Unmount Phase follows this order:
+<ol>
+<li><code>componentWillUnmount()</code></li>
+<li>Children Life cycle methods</li>
+<li>Instance destroyed for Garbage Collection</li>
+</ol>
