--- a/basic-react-components/6.9.md
+++ b/basic-react-components/6.9.md
@@ -42,4 +42,6 @@ Given that `this.props.children` can potentially contain a wide set of nodes and
 ### Notes
 
 * When there is only a single child, `this.props.children` will be the single child component itself without the array wrapper. This saves an array allocation.
-* It can be [confusing](https://facebook.github.io/react/tips/children-undefined.html) at first to realize that `children` are not what a component returns, but instead what is contained inside of component anywhere (including in a `render`) it is instantiated. 
+* It can be [confusing](https://facebook.github.io/react/tips/children-undefined.html) at first to realize that `children` are not what a component returns, but instead what is contained inside of component anywhere (including in a `render`) it is instantiated.
+
+test
